[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nsa-test-lab"
version = "0.1.0"
description = "Standalone Negative Selection Algorithm detectors and benchmarks."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-2-Clause" }
authors = [
  { name = "Kishor Datta Gupta" }
]
keywords = [
  "anomaly-detection",
  "artificial-immune-system",
  "negative-selection-algorithm",
  "nsa",
  "benchmark"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "numpy>=1.22",
  "scikit-learn>=1.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=7"
]

[project.scripts]
nsa-benchmark = "experiments.run_benchmark:main"

[project.urls]
Homepage = "https://github.com/kishordgupta/nsa-test-lab"
Repository = "https://github.com/kishordgupta/nsa-test-lab"
Issues = "https://github.com/kishordgupta/nsa-test-lab/issues"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["nsa_test_lab*", "experiments*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src", "."]
